fixed popUp overflow

--- a/components/Modal/modal.module.sass
+++ b/components/Modal/modal.module.sass
@@ -17,7 +17,7 @@
     z-index: 9999
     &__content
         position: relative
-        max-height: 80vh
+        max-height: 90%
         overflow-y: auto
         margin: auto
         opacity: 0
